--- a/gallery.html
+++ b/gallery.html
@@ -121,25 +121,7 @@
 
          <div class="container">
       <img src="images\Wallis ski tour.png" style="width:100%">
-          <div class="overlay">
-            <div class="text">Mattertal, Switzerland</div>
-          </div>
-        </div>                  
-
-         <div class="container">
-      <img src="images\waterfall.jpeg" style="width:100%">
-          <div class="overlay">
-            <div class="text">Anisaka Falls</div>
-          </div>
-        </div>           
-    </div>
-  </div>
-
-  
-  <script>
-  var elements = document.getElementsByClassName("column");
-  var i = 0;
-  // Full-width images
+          <div class="overlay"
   function one() {
       for (i = 0; i < elements.length; i++) {
           elements[i].style.flex = "100%";
