--- a/gallery.html
+++ b/gallery.html
@@ -43,7 +43,7 @@
 <body>
      <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <img src="images\compassIcon.png" class="logo" alt="logo" width="42" height="42">
+      <img src="images\logo.png" style="padding-right: 10px;"  class="logo" alt="logo" width="42" height="42">
     <a class="navbar-brand" href="index.html">Home</a>
     <a class="navbar-brand" href="gallery.html">Gallery</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
